terraform/security_groups.tf
# Firewall Load Balancer (Public Access)
resource "aws_security_group" "alb_sg" {
  name        = "stephanie-keys-alb-sg"
  description = "Akses HTTP/HTTPS publik"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Firewall Backend (Hanya terima dari Load Balancer)
resource "aws_security_group" "backend_sg" {
  name        = "stephanie-keys-backend-sg"
  description = "Trafik hanya dari ALB"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port       = 8080
    to_port         = 8080
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Firewall Database (Hanya terima dari Backend)
resource "aws_security_group" "db_sg" {
  name        = "stephanie-keys-db-sg"
  description = "Koneksi DB HANYA dari Backend"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.backend_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
